# Consile

./: CMakeLists.txt
include/: console.h  console.ui
src/: CMakeLists.txt  console.cpp  main.cpp
